# tg_backup

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tg_backup/: __main__.py  backup.py  types.py
tg_backup/backup/: __init__.py
tg_backup/utils/: json_streaming.py  loading.py  progress_tracking.py  text_streaming.py
